--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
               </p>
             </article>
             <article class="card">
-              <h3>선정 후 운영지원</h3>
-              <p>협약, 보고, 정산, 일정관리까지 실제 운영을 함께합니다.</p>
+              <h3>AI iot 실시간 관제</h3>
+              <p>현장 데이터를 실시간으로 모니터링하고 이상 상황에 빠르게 대응합니다.</p>
             </article>
           </div>
         </div>
