Switch consultation form to automatic email submission

--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
             <label for="message">상담 내용</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
-            <button class="btn btn-primary" type="submit">상담 신청 메일 작성</button>
-            <p class="form-note">제출 시 메일 앱이 열리며, 입력한 내용이 자동으로 채워집니다.</p>
+            <button class="btn btn-primary" type="submit">상담 신청 보내기</button>
+            <p class="form-note">제출 즉시 HelpBiz 메일로 자동 접수됩니다.</p>
+            <p id="formStatus" class="form-status" role="status" aria-live="polite"></p>
           </form>
         </div>
       </section>
